--- a/index.html
+++ b/index.html
@@ -87,20 +87,15 @@
             'materials/imgs/instruction_images/InstructionImg1D78.png', 'materials/imgs/instruction_images/InstructionImg2D34.png', 'materials/imgs/instruction_images/InstructionImg3D80.png',
             //trial images
             "materials/imgs/D1.png",
-            "materials/imgs/D2.png",
-            "materials/imgs/D3.png",
-            "materials/imgs/D4.png",
-            "materials/imgs/D5.png",
-            "materials/imgs/D6.png",
-            "materials/imgs/D7.png",
-            "materials/imgs/D8.png",
-            "materials/imgs/D9.png",
-            "materials/imgs/D10.png",
+            "materials/imgs/D101.png",
+            "materials/imgs/D102.png",
+            "materials/imgs/D103.png",
+            "materials/imgs/D104.png",
+            "materials/imgs/D105.png",
+            "materials/imgs/D106.png",
             "materials/imgs/D11.png",
-            "materials/imgs/D12.png",
-            "materials/imgs/D13.png",
+            "materials/imgs/D111.png",
             "materials/imgs/D14.png",
-            "materials/imgs/D15.png",
             "materials/imgs/D16.png",
             "materials/imgs/D17.png",
             "materials/imgs/D18.png",
@@ -108,96 +103,51 @@
             "materials/imgs/D20.png",
             "materials/imgs/D21.png",
             "materials/imgs/D22.png",
-            "materials/imgs/D23.png",
             "materials/imgs/D24.png",
             "materials/imgs/D25.png",
             "materials/imgs/D26.png",
-            "materials/imgs/D27.png",
-            "materials/imgs/D28.png",
             "materials/imgs/D29.png",
-            "materials/imgs/D30.png",
-            "materials/imgs/D31.png",
+            "materials/imgs/D3.png",
             "materials/imgs/D32.png",
-            "materials/imgs/D33.png",
             "materials/imgs/D34.png",
             "materials/imgs/D35.png",
             "materials/imgs/D36.png",
             "materials/imgs/D37.png",
-            "materials/imgs/D38.png",
-            "materials/imgs/D39.png",
-            "materials/imgs/D40.png",
-            "materials/imgs/D41.png",
-            "materials/imgs/D42.png",
-            "materials/imgs/D43.png",
-            "materials/imgs/D44.png",
-            "materials/imgs/D45.png",
+            "materials/imgs/D4.png",
             "materials/imgs/D46.png",
             "materials/imgs/D47.png",
             "materials/imgs/D48.png",
             "materials/imgs/D49.png",
-            "materials/imgs/D50.png",
             "materials/imgs/D51.png",
             "materials/imgs/D52.png",
             "materials/imgs/D53.png",
-            "materials/imgs/D54.png",
             "materials/imgs/D55.png",
             "materials/imgs/D56.png",
             "materials/imgs/D57.png",
-            "materials/imgs/D58.png",
-            "materials/imgs/D59.png",
-            "materials/imgs/D60.png",
-            "materials/imgs/D61.png",
-            "materials/imgs/D62.png",
-            "materials/imgs/D63.png",
+            "materials/imgs/D6.png",
             "materials/imgs/D64.png",
             "materials/imgs/D65.png",
             "materials/imgs/D66.png",
-            "materials/imgs/D67.png",
             "materials/imgs/D68.png",
-            "materials/imgs/D69.png",
-            "materials/imgs/D70.png",
-            "materials/imgs/D71.png",
-            "materials/imgs/D72.png",
-            "materials/imgs/D73.png",
             "materials/imgs/D74.png",
             "materials/imgs/D75.png",
             "materials/imgs/D76.png",
             "materials/imgs/D77.png",
             "materials/imgs/D78.png",
             "materials/imgs/D79.png",
+            "materials/imgs/D8.png",
             "materials/imgs/D80.png",
             "materials/imgs/D81.png",
             "materials/imgs/D82.png",
             "materials/imgs/D83.png",
             "materials/imgs/D84.png",
             "materials/imgs/D85.png",
-            "materials/imgs/D86.png",
             "materials/imgs/D87.png",
-            "materials/imgs/D88.png",
-            "materials/imgs/D89.png",
-            "materials/imgs/D90.png",
-            "materials/imgs/D91.png",
+            "materials/imgs/D9.png",
             "materials/imgs/D92.png",
-            "materials/imgs/D93.png",
             "materials/imgs/D94.png",
             "materials/imgs/D95.png",
-            "materials/imgs/D96.png",
-            "materials/imgs/D97.png",
-            "materials/imgs/D98.png",
-            "materials/imgs/D99.png",
-            "materials/imgs/D100.png",
-            "materials/imgs/D101.png",
-            "materials/imgs/D102.png",
-            "materials/imgs/D103.png",
-            "materials/imgs/D104.png",
-            "materials/imgs/D105.png",
-            "materials/imgs/D106.png",
-            "materials/imgs/D107.png",
-            "materials/imgs/D108.png",
-            "materials/imgs/D109.png",
-            "materials/imgs/D110.png",
-            "materials/imgs/D111.png",
-            "materials/imgs/D112.png",
+            "materials/imgs/D96.png"
         ],
         show_progress_bar: true,
         message: "Loading experiment files...",
@@ -208,20 +158,15 @@
 
     var stimuli_texture = [
         { texture: "materials/imgs/D1.png" },
-        { texture: "materials/imgs/D2.png" },
-        { texture: "materials/imgs/D3.png" },
-        { texture: "materials/imgs/D4.png" },
-        { texture: "materials/imgs/D5.png" },
-        { texture: "materials/imgs/D6.png" },
-        { texture: "materials/imgs/D7.png" },
-        { texture: "materials/imgs/D8.png" },
-        { texture: "materials/imgs/D9.png" },
-        { texture: "materials/imgs/D10.png" },
+        { texture: "materials/imgs/D101.png" },
+        { texture: "materials/imgs/D102.png" },
+        { texture: "materials/imgs/D103.png" },
+        { texture: "materials/imgs/D104.png" },
+        { texture: "materials/imgs/D105.png" },
+        { texture: "materials/imgs/D106.png" },
         { texture: "materials/imgs/D11.png" },
-        { texture: "materials/imgs/D12.png" },
-        { texture: "materials/imgs/D13.png" },
+        { texture: "materials/imgs/D111.png" },
         { texture: "materials/imgs/D14.png" },
-        { texture: "materials/imgs/D15.png" },
         { texture: "materials/imgs/D16.png" },
         { texture: "materials/imgs/D17.png" },
         { texture: "materials/imgs/D18.png" },
@@ -229,114 +174,64 @@
         { texture: "materials/imgs/D20.png" },
         { texture: "materials/imgs/D21.png" },
         { texture: "materials/imgs/D22.png" },
-        { texture: "materials/imgs/D23.png" },
         { texture: "materials/imgs/D24.png" },
         { texture: "materials/imgs/D25.png" },
         { texture: "materials/imgs/D26.png" },
-        { texture: "materials/imgs/D27.png" },
-        { texture: "materials/imgs/D28.png" },
         { texture: "materials/imgs/D29.png" },
-        { texture: "materials/imgs/D30.png" },
-        { texture: "materials/imgs/D31.png" },
+        { texture: "materials/imgs/D3.png" },
         { texture: "materials/imgs/D32.png" },
-        { texture: "materials/imgs/D33.png" },
         { texture: "materials/imgs/D34.png" },
         { texture: "materials/imgs/D35.png" },
         { texture: "materials/imgs/D36.png" },
         { texture: "materials/imgs/D37.png" },
-        { texture: "materials/imgs/D38.png" },
-        { texture: "materials/imgs/D39.png" },
-        { texture: "materials/imgs/D40.png" },
-        { texture: "materials/imgs/D41.png" },
-        { texture: "materials/imgs/D42.png" },
-        { texture: "materials/imgs/D43.png" },
-        { texture: "materials/imgs/D44.png" },
-        { texture: "materials/imgs/D45.png" },
+        { texture: "materials/imgs/D4.png" },
         { texture: "materials/imgs/D46.png" },
         { texture: "materials/imgs/D47.png" },
         { texture: "materials/imgs/D48.png" },
         { texture: "materials/imgs/D49.png" },
-        { texture: "materials/imgs/D50.png" },
         { texture: "materials/imgs/D51.png" },
         { texture: "materials/imgs/D52.png" },
         { texture: "materials/imgs/D53.png" },
-        { texture: "materials/imgs/D54.png" },
         { texture: "materials/imgs/D55.png" },
         { texture: "materials/imgs/D56.png" },
         { texture: "materials/imgs/D57.png" },
-        { texture: "materials/imgs/D58.png" },
-        { texture: "materials/imgs/D59.png" },
-        { texture: "materials/imgs/D60.png" },
-        { texture: "materials/imgs/D61.png" },
-        { texture: "materials/imgs/D62.png" },
-        { texture: "materials/imgs/D63.png" },
+        { texture: "materials/imgs/D6.png" },
         { texture: "materials/imgs/D64.png" },
         { texture: "materials/imgs/D65.png" },
         { texture: "materials/imgs/D66.png" },
-        { texture: "materials/imgs/D67.png" },
         { texture: "materials/imgs/D68.png" },
-        { texture: "materials/imgs/D69.png" },
-        { texture: "materials/imgs/D70.png" },
-        { texture: "materials/imgs/D71.png" },
-        { texture: "materials/imgs/D72.png" },
-        { texture: "materials/imgs/D73.png" },
         { texture: "materials/imgs/D74.png" },
         { texture: "materials/imgs/D75.png" },
         { texture: "materials/imgs/D76.png" },
         { texture: "materials/imgs/D77.png" },
         { texture: "materials/imgs/D78.png" },
         { texture: "materials/imgs/D79.png" },
+        { texture: "materials/imgs/D8.png" },
         { texture: "materials/imgs/D80.png" },
         { texture: "materials/imgs/D81.png" },
         { texture: "materials/imgs/D82.png" },
         { texture: "materials/imgs/D83.png" },
         { texture: "materials/imgs/D84.png" },
         { texture: "materials/imgs/D85.png" },
-        { texture: "materials/imgs/D86.png" },
         { texture: "materials/imgs/D87.png" },
-        { texture: "materials/imgs/D88.png" },
-        { texture: "materials/imgs/D89.png" },
-        { texture: "materials/imgs/D90.png" },
-        { texture: "materials/imgs/D91.png" },
+        { texture: "materials/imgs/D9.png" },
         { texture: "materials/imgs/D92.png" },
-        { texture: "materials/imgs/D93.png" },
         { texture: "materials/imgs/D94.png" },
         { texture: "materials/imgs/D95.png" },
-        { texture: "materials/imgs/D96.png" },
-        { texture: "materials/imgs/D97.png" },
-        { texture: "materials/imgs/D98.png" },
-        { texture: "materials/imgs/D99.png" },
-        { texture: "materials/imgs/D100.png" },
-        { texture: "materials/imgs/D101.png" },
-        { texture: "materials/imgs/D102.png" },
-        { texture: "materials/imgs/D103.png" },
-        { texture: "materials/imgs/D104.png" },
-        { texture: "materials/imgs/D105.png" },
-        { texture: "materials/imgs/D106.png" },
-        { texture: "materials/imgs/D107.png" },
-        { texture: "materials/imgs/D108.png" },
-        { texture: "materials/imgs/D109.png" },
-        { texture: "materials/imgs/D110.png" },
-        { texture: "materials/imgs/D111.png" },
-        { texture: "materials/imgs/D112.png" },
+        { texture: "materials/imgs/D96.png" }
     ];
 
     var texture_arr = [
         "materials/imgs/D1.png",
-        "materials/imgs/D2.png",
-        "materials/imgs/D3.png",
-        "materials/imgs/D4.png",
-        "materials/imgs/D5.png",
-        "materials/imgs/D6.png",
-        "materials/imgs/D7.png",
-        "materials/imgs/D8.png",
-        "materials/imgs/D9.png",
-        "materials/imgs/D10.png",
+        "materials/imgs/D101.png",
+        "materials/imgs/D102.png",
+        "materials/imgs/D103.png",
+        "materials/imgs/D104.png",
+        "materials/imgs/D105.png",
+        "materials/imgs/D106.png",
         "materials/imgs/D11.png",
-        "materials/imgs/D12.png",
-        "materials/imgs/D13.png",
+        "materials/imgs/D111.png",
         "materials/imgs/D14.png",
-        "materials/imgs/D15.png",
         "materials/imgs/D16.png",
         "materials/imgs/D17.png",
         "materials/imgs/D18.png",
@@ -344,96 +239,51 @@
         "materials/imgs/D20.png",
         "materials/imgs/D21.png",
         "materials/imgs/D22.png",
-        "materials/imgs/D23.png",
         "materials/imgs/D24.png",
         "materials/imgs/D25.png",
         "materials/imgs/D26.png",
-        "materials/imgs/D27.png",
-        "materials/imgs/D28.png",
         "materials/imgs/D29.png",
-        "materials/imgs/D30.png",
-        "materials/imgs/D31.png",
+        "materials/imgs/D3.png",
         "materials/imgs/D32.png",
-        "materials/imgs/D33.png",
         "materials/imgs/D34.png",
         "materials/imgs/D35.png",
         "materials/imgs/D36.png",
         "materials/imgs/D37.png",
-        "materials/imgs/D38.png",
-        "materials/imgs/D39.png",
-        "materials/imgs/D40.png",
-        "materials/imgs/D41.png",
-        "materials/imgs/D42.png",
-        "materials/imgs/D43.png",
-        "materials/imgs/D44.png",
-        "materials/imgs/D45.png",
+        "materials/imgs/D4.png",
         "materials/imgs/D46.png",
         "materials/imgs/D47.png",
         "materials/imgs/D48.png",
         "materials/imgs/D49.png",
-        "materials/imgs/D50.png",
         "materials/imgs/D51.png",
         "materials/imgs/D52.png",
         "materials/imgs/D53.png",
-        "materials/imgs/D54.png",
         "materials/imgs/D55.png",
         "materials/imgs/D56.png",
         "materials/imgs/D57.png",
-        "materials/imgs/D58.png",
-        "materials/imgs/D59.png",
-        "materials/imgs/D60.png",
-        "materials/imgs/D61.png",
-        "materials/imgs/D62.png",
-        "materials/imgs/D63.png",
+        "materials/imgs/D6.png",
         "materials/imgs/D64.png",
         "materials/imgs/D65.png",
         "materials/imgs/D66.png",
-        "materials/imgs/D67.png",
         "materials/imgs/D68.png",
-        "materials/imgs/D69.png",
-        "materials/imgs/D70.png",
-        "materials/imgs/D71.png",
-        "materials/imgs/D72.png",
-        "materials/imgs/D73.png",
         "materials/imgs/D74.png",
         "materials/imgs/D75.png",
         "materials/imgs/D76.png",
         "materials/imgs/D77.png",
         "materials/imgs/D78.png",
         "materials/imgs/D79.png",
+        "materials/imgs/D8.png",
         "materials/imgs/D80.png",
         "materials/imgs/D81.png",
         "materials/imgs/D82.png",
         "materials/imgs/D83.png",
         "materials/imgs/D84.png",
         "materials/imgs/D85.png",
-        "materials/imgs/D86.png",
         "materials/imgs/D87.png",
-        "materials/imgs/D88.png",
-        "materials/imgs/D89.png",
-        "materials/imgs/D90.png",
-        "materials/imgs/D91.png",
+        "materials/imgs/D9.png",
         "materials/imgs/D92.png",
-        "materials/imgs/D93.png",
         "materials/imgs/D94.png",
         "materials/imgs/D95.png",
-        "materials/imgs/D96.png",
-        "materials/imgs/D97.png",
-        "materials/imgs/D98.png",
-        "materials/imgs/D99.png",
-        "materials/imgs/D100.png",
-        "materials/imgs/D101.png",
-        "materials/imgs/D102.png",
-        "materials/imgs/D103.png",
-        "materials/imgs/D104.png",
-        "materials/imgs/D105.png",
-        "materials/imgs/D106.png",
-        "materials/imgs/D107.png",
-        "materials/imgs/D108.png",
-        "materials/imgs/D109.png",
-        "materials/imgs/D110.png",
-        "materials/imgs/D111.png",
-        "materials/imgs/D112.png",
+        "materials/imgs/D96.png"
     ];
 
     //plan:
