--- a/index.html
+++ b/index.html
@@ -24,29 +24,17 @@
 <body></body>
 <script>
 
-    // ---------- UPDATE THESE ------------------
-
-    //General experiment info to update
-    var expServer = 0; //0 = not server version (writes a local csv file); 1 = server version (checks ID register, condition, data saving onto local or WID server)
-    console.log(expServer)
-    var expType = 1; // 0 = SONA version; 1 = mTurk version (relevant for consent form & debriefing)
-
-    var expTime = 20; // How long experiment will take in minutes
-    var experimenterName = "alchinni@wisc.edu"  //Update to your contact info. this is presented if an error arises for a participant
-    var numConditions = 1; //Number of conditions. If more than 1 and on server, will counterbalance. 
-    var numTasks = 1;  //Number of experimental tasks (not counting consent/demographics)
-
-
+    //initiate 
     var jsPsych = initJsPsych({
         show_progress_bar: false,
         on_data_update: function () {
             jsPsych.data.addProperties({ worker_id: urlvar.workerId });
-            //timeline.push(save_data);
+            timeline.push(save_data);
         },
         on_finish: function () {
             jsPsych.data.addProperties({ worker_id: urlvar.workerId });
             jsPsych.data.get().localSave("csv", filename);
-            //timeline.push(save_data);
+            timeline.push(save_data);
         },
         max_load_time: 120000,
     });
@@ -54,30 +42,33 @@
     // Create timeline variable //
     var timeline = []; //timeline for experiment (once ID is registered)
 
-    /* create timeline */
-    //var timeline = [];
+    //create random ids
     const subject_id = jsPsych.randomization.randomID(10);
     const filename = `${subject_id}.csv`;
 
-    //Participant ID for experimenter to fill
-    var participant_id = {
-        type: jsPsychSurveyText,
-        questions: [
-            { prompt: "ID Number", name: 'ID', rows: "1", columns: "3", required: true, }]
-    };
+    //SONA
 
-    timeline.push(participant_id);
+    // Capture the participant ID
+    let sona_id = jsPsych.data.urlVariables()['sona_id']
+
+
+    // Set background color to gray //
+    document.body.style.backgroundColor = "rgb(128,128,128)"
 
 
     var urlvar = jsPsych.data.urlVariables();
 
-    // const save_data = {
-    //   type: jsPsychPipe,
-    //   action: "save",
-    //   experiment_id: "23TJCN2jsCll",
-    //   filename: filename,
-    //   data_string: () => jsPsych.data.get().csv(),
-    // };
+    const save_data = {
+        type: jsPsychPipe,
+        action: "save",
+        experiment_id: "ZaaHT6UrsmnC",
+        filename: filename,
+        wait_message: 'Please wait a moment while the next page loads.',
+        data_string: () => jsPsych.data.get().csv(),
+        on_finish: (data) => {
+            console.log("Data saved:", data);
+        }
+    };
 
     var preload = {
         type: jsPsychPreload,
@@ -680,17 +671,90 @@
         trial_duration: 500
     }
 
-    // Overview instructions of experiment /// UPDATE + TotalTasks +, + numTasks +, + expTime +, + totalTasks +
-    var totalTasks = numTasks + 1;
+    // Initial welcome screen
+    var initial_screen = {
+        type: jsPsychHtmlButtonResponse,
+        stimulus: `<div style='text-align:center; font-size:20px; line-height:25px; width: 1200px;'>
+                Welcome to our experiment! <br>
+                <br>At the bottom of this screen, you will see a button that says 'Begin Experiment.
+                <br>Please only click that button when you are ready to complete the 25 minute experiment in one sitting. <br>
+                <br> Once you click that button, it will not be possible to restart the experiment. <br><br>`,
+        choices: ['Begin Experiment']
+    }
+    timeline.push(initial_screen);
 
+    timeline.push({
+        type: jsPsychFullscreen,
+        fullscreen_mode: true,
+    })
+
+    var consentSign = {
+        type: jsPsychSurveyMultiSelect,
+        questions: [
+            {
+                prompt:
+                    "  <strong>UNIVERSITY OF WISCONSIN-MADISON</strong>" +
+                    "  <br><strong>Research Participant Information and Consent Form</strong>" +
+                    " <br><br><strong>Title of the Study:</strong> Investigating how observers perceive, interpret, and evaluate visual features in 2D scenes and 3D environments" +
+                    " <br><br><strong>Principal Investigator:</strong> Karen B. Schloss (phone: 608-316-4495) (email: kschloss@wisc.edu)" +
+                    "  <br><br><strong><u>DESCRIPTION OF THE RESEARCH</u></strong>" +
+                    "  <br>You are invited to participate in a research study about how visual features influence the ability to perceive, interpret, navigate, and remember information in visual displays" +
+                    "  <br><br>You have been asked to participate because you saw a description of the study and signed up to be a participant." +
+                    "  <br><br>The purpose of the research is to understand principles by which people perceive, evaluate and interpret visual information (e.g., the meaning of parts of a scientific diagram)." +
+                    "  <br><br>This study will include adults from UW-Madison and nearby areas who volunteer to participate." +
+                    "  <br><br>The research will be conducted online, with no requirement to appear in person." +
+                    "  <br><br><strong><u>WHAT WILL MY PARTICIPATION INVOLVE?</u></strong>" +
+                    "  <br>If you decide to participate in this research you will be presented with visual displays containing images and/or text and will be asked to make judgments about them. For example, you may see shapes and be asked how round they appear or view a graph with a legend and interpret information about the data in the graph." +
+                    "  <br><br>You will be asked to respond by making button presses on a keyboard/mouse. You may be asked to complete questionnaires about your expertise or educational level in a given domain (e.g., neuroscience) and questionnaires about what sorts of things you like/dislike. Finally, you may be asked to respond to questions about your experience during the experiment (e.g., how much you enjoyed the task)." +
+                    "  <br><br>You will be asked to complete 2-6 surveys or tasks." +
+                    "  <br><br>Your participation will last approximately 30-60 minutes per session (as specified when you signed up to participate) and will require 1 session (30 to 60 min total)." +
+                    "  <br><br><strong><u>ARE THERE ANY RISKS TO ME?</u></strong>" +
+                    "  <br>We don't anticipate any risks to you from participating in this study." +
+                    "  <br><br><strong><u>ARE THERE ANY BENEFITS TO ME?</u></strong>" +
+                    "  <br>There are no direct benefits for participating in this study." +
+                    "  <br><br><strong><u>WILL I BE COMPENSATED FOR MY PARTICIPATION?</u></strong>" +
+                    "  <br>Consistent with PSY 202/210/225 policies, you will receive 1 extra credit point/30 minutes of study participation. At the end of the semester, those extra credit points are converted such that 1 point of extra credit = 0.33% added directly to your grade at the end of term. Consult your class syllabus for additional details regarding the application of extra credit points to your final grade." +
+                    "  <br><br><strong><u>HOW WILL MY CONFIDENTIALITY BE PROTECTED?</u></strong>" +
+                    "  <br>While there will probably be publications as a result of this study, your name will not be used. Typically, group characteristics will be published, but datasets with individual responses may also be shared. In such cases, the data will not be linked to your name or other identifiable information." +
+                    "  <br><br><strong><u>WHOM SHOULD I CONTACT IF I HAVE QUESTIONS?</u></strong>" +
+                    "  <br>You may ask any questions about the research at any time. If you have questions about the research you can contact the Principal Investigator Karen B. Schloss at 608-316-4495." +
+                    "  <br><br>If you are not satisfied with response of research team, have more questions, or want to talk with someone about your rights as a research participant, you should contact the Education and Social/Behavioral Science IRB Office at 608-263-2320." +
+                    "  <br><br>Your participation is completely voluntary. If you decide not to participate or to withdraw from the study you may do so without penalty." +
+                    "  <br><br>By clicking the box below, you confirm that you have read this consent form, had an opportunity to ask any questions about your participation in this research and voluntarily consent to participate. You may print a copy of this form for your records." +
+                    "  <br><br>Please click the box below next to the text 'I consent' to give your informed consent to participate. " +
+                    "   </p>",
+                options: ["<strong>I consent</strong>"],
+                horizontal: false,
+                required: true,
+                name: 'Consent'
+            },
+        ],
+        button_label: "Start Experiment",
+    };
+
+    timeline.push(consentSign);
+
+    // Overview instructions of experiment
     var overview_instructions = {
         type: jsPsychHtmlButtonResponse,
-        stimulus: 'Welcome! <p> This experiment involves 1 experimental task.' +
-            '<p> It will take about ' + expTime + ' minutes to complete all trials.',
+        stimulus: 'Welcome! <p> This experiment involves two parts: demographic information, followed by the experimental task.' +
+            '<p> It will take about 25 minutes to complete both parts.',
         choices: ['Continue']
     }
     timeline.push(overview_instructions);
 
+    var age_lang_demo = {
+        type: jsPsychSurveyText,
+        questions: [
+            { prompt: "Age", name: 'Age', rows: "1", columns: "3", required: true, },
+            { prompt: "Gender", name: 'Gender', rows: "1", columns: "15", required: true, },
+            { prompt: "Race/ethnicity", name: 'Race/ethnicity', rows: "1", columns: "30", required: true, }
+        ],
+        preamble: "Please answer the following questions.",
+        button_label: "Done",
+        randomize_question_order: false
+    }
+    timeline.push(age_lang_demo);
 
     var lasttrialdata_rt = 0;
 
@@ -722,8 +786,7 @@
       </div>
     </div>
 
-      <p>If you have any questions, please ask them now.</p>
-      <p>Otherwise, please click 'Continue' to begin practice.</p>`,
+      <p>When you are ready to proceed, please click 'Continue' to begin practice.</p>`,
         choices: ["Continue"],
         post_trial_gap: 2000
     };
@@ -1145,59 +1208,23 @@
     var quick_break1 = {
         type: jsPsychHtmlButtonResponse,
         stimulus:
-            "Nice job! You have completed 25% of the experiment trials. Feel free to take a quick break, then click 'Continue' when you are ready proceed to the next round." +
-            "<p>Remember, your task is to <strong>select the item closest to the item on top.</strong>",
+            "You have completed 25% of the trials. Please click 'Continue' when you are ready proceed.",
         choices: ["Continue"],
     };
 
     var quick_break2 = {
         type: jsPsychHtmlButtonResponse,
         stimulus:
-            "Nice job! You have completed 50% of the experiment trials. Feel free to take a quick break, then click 'Continue' when you are ready proceed to the next round." +
-            "<p>Remember, your task is to <strong>select the item closest to the item on top.</strong>",
+            "You have completed 50% of the trials. Please click 'Continue' when you are ready proceed.",
         choices: ["Continue"],
     };
 
     var quick_break3 = {
         type: jsPsychHtmlButtonResponse,
         stimulus:
-            "Nice job! You have completed 75% of the experiment trials. Feel free to take a quick break, then click 'Continue' when you are ready proceed to the next round." +
-            "<p>Remember, your task is to <strong>select the item closest to the item on top.</strong>",
+            "You have completed 75% of the trials. Please click 'Continue' when you are ready proceed.",
         choices: ["Continue"],
     };
-
-    // var trial_count = 0;  // Initialize a counter for tracking the number of trials
-    // var total_trials = 200;  // Set the total number of trials in your experiment
-    // var break_points = [0.25, 0.50, 0.75];  // Define break points as fractions of the total trials
-    // var break_indices = break_points.map(bp => Math.round(bp * total_trials));  // Convert break points to indices
-    // var next_break_index = 0;  // Track the next break point to show
-
-    // // Define the break message based on percentage
-    // var break_trial = {
-    //   type: jsPsychHtmlButtonResponse,
-    //   stimulus: function () {
-    //     var percent_complete = (trial_count / total_trials) * 100;
-    //     return "<p>You are " + percent_complete.toFixed(0) + "% of the way through the experiment.</p>" +
-    //       "<p>Take a short break, and press 'Continue' when you're ready to proceed.</p>";
-    //   },
-    //   choices: ['Continue']
-    // };
-
-    // // Function to determine when to show a break (at 25%, 50%, and 75%)
-    // var check_break_function = function () {
-    //   // Check if the current trial count is at or past the next break point
-    //   if (trial_count >= break_indices[next_break_index]) {
-    //     next_break_index++;  // Move to the next break point
-    //     return true;  // Trigger the break trial
-    //   } else {
-    //     return false;  // Skip the break trial
-    //   }
-    // };
-
-    // // Update trial_count after each batch of trials
-    // var update_trial_count = function (trial_sample_size) {
-    //   trial_count += trial_sample_size;
-    // };
 
     var texture_procedure = {
         timeline: [
@@ -1217,18 +1244,6 @@
     timeline.push(quick_break3);
     timeline.push(texture_procedure);
 
-    // var trial_and_breaks_procedure = {
-    //   timeline: [texture_procedure, break_trial],
-    //   loop_function: function () {
-    //     return check_break_function();
-    //   }
-    // }
-
-    // timeline.push(trial_and_breaks_procedure);
-    // timeline.push(break_trial);
-    //timeline.push(quick_break);
-    //timeline.push(texture_procedure);
-
     // total number of trials per participant = (a(5)(4)) + (b(5)(4)) + (c(5)(4))
     // First value = number of repetitions
     // Second value = number of blocks
@@ -1239,15 +1254,33 @@
     // for 200 trials -> a = 2, b = 7, c = 1 
 
     //timeline.push(save_data); //ACTUALLY PUSHING DATA TO SERVER
+    timeline.push(save_data);
 
-    var goodbye = {
+    // Final message at the end of the experiment
+    var debrief_script = {
         type: jsPsychHtmlButtonResponse,
-        stimulus:
-            `<p>You have finished the experiment.</p>
-    <p>Please click the button below to complete the experiment and inform the experimenter. Thank you!</p>`,
-        choices: ['Continue']
+        stimulus: `
+            <div style='text-align:center; margin-left=-100px; font-size:20px; line-height:25px; width: 1200px;'>Great Job! You're done viewing all textures!<br></br>
+                <br> The goal of this study is to understand how people form associations between visual textures and concepts.
+                <br> To do this, we need to collect data on how people view the similarity and differences of textures.
+                <br> Please do not inform other potential participants of the hypotheses in our experiment.
+                <br> Please click 'Next' in order to receive credit through sona. <br><br> </div>`,
+        choices: ['Next'],
     };
-    timeline.push(goodbye);
+
+    timeline.push(debrief_script);
+
+    //spot for debrief
+
+    var thank_you = {
+        type: jsPsychHtmlKeyboardResponse,
+        stimulus: `<div style="width:800px"> Thank you!
+                <br><br>Credit for your participation will appear on SONA in the next few days.
+                <br><br> You may press the 'esc' key to end the experiment and exit full screen.`,
+        choices: 'ALL_KEYS',
+    }
+
+    timeline.push(thank_you);
 
     /* ---------------------------------- End of main experiment ---------------------------------------- */
 
