--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@
         type: jsPsychHtmlButtonResponse,
         stimulus:
             `<div style='text-align: center;'>
-      <p>In each trial of this task, you will see three images: one target item on top, and two choices beneath the target item.</p>
+      <p>In each trial of this task, you will see three texture images: one target item on top, and two choices beneath the target item.</p>
       <p><strong>Please select the item that is most like the target item.</strong></p>
       <p>To select the option on the <strong>LEFT</strong>, press the <strong>LEFT ARROW</strong> key. 
       To select the option on the <strong>RIGHT</strong>, press the <strong>RIGHT ARROW</strong> key.</p>
